fix: change align-items 'end' valeue to 'flex-end' end due to mixed support 'end' value

--- a/src/components/ProjectCard/index.scss
+++ b/src/components/ProjectCard/index.scss
@@ -60,7 +60,7 @@
             }
             .bottom-card {
                 display: flex;
-                align-items: end;
+                align-items: flex-end;
                 justify-content: space-between;
 
                 .project-technologies {
