--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -168,7 +168,7 @@
             margin-left: auto;
             width: 20%;
             display: flex;
-            justify-content: end;
+            justify-content: flex-end;
 
             li {
                 margin: 0 5px;
